--- a/QuanLiNhaHang/Model/Model.csproj
+++ b/QuanLiNhaHang/Model/Model.csproj
@@ -59,26 +59,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ban.cs" />
+    <Compile Include="ChiTietHoaDon.cs" />
+    <Compile Include="ChiTietPhieuNhap.cs" />
+    <Compile Include="ChucVu.cs" />
     <Compile Include="Dao\NhanVienDao.cs" />
-    <Compile Include="EF\Ban.cs" />
-    <Compile Include="EF\ChiTietHoaDon.cs" />
-    <Compile Include="EF\ChiTietKhuyenMai.cs" />
-    <Compile Include="EF\ChiTietPhieuNhap.cs" />
-    <Compile Include="EF\ChucVu.cs" />
-    <Compile Include="EF\DonViTinh.cs" />
-    <Compile Include="EF\GiamGia.cs" />
-    <Compile Include="EF\HoaDon.cs" />
-    <Compile Include="EF\KhuVuc.cs" />
-    <Compile Include="EF\KhuyenMai.cs" />
-    <Compile Include="EF\MatHang.cs" />
-    <Compile Include="EF\MonAN.cs" />
-    <Compile Include="EF\NhaCungCap.cs" />
-    <Compile Include="EF\NhanVien.cs" />
-    <Compile Include="EF\NhomMonAN.cs" />
-    <Compile Include="EF\PhieuNhap.cs" />
-    <Compile Include="EF\QuanLiNhaHangDbContext.cs" />
-    <Compile Include="EF\ThanhPhan.cs" />
+    <Compile Include="DonViTinh.cs" />
+    <Compile Include="HoaDon.cs" />
+    <Compile Include="KhuVuc.cs" />
+    <Compile Include="MatHang.cs" />
+    <Compile Include="MonAn.cs" />
+    <Compile Include="NhaCungCap.cs" />
+    <Compile Include="NhomMonAn.cs" />
+    <Compile Include="PhieuNhap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuanLiNhaHangDbContext.cs" />
+    <Compile Include="TaiKhoan.cs" />
+    <Compile Include="ThanhPhan.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
