đổi hết những thứ liên quan bảng nhanvien thành taikhoan

--- a/QuanLiNhaHang/QuanLiNhaHang/QuanLiNhaHang.csproj
+++ b/QuanLiNhaHang/QuanLiNhaHang/QuanLiNhaHang.csproj
@@ -221,6 +221,45 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\css for Index\css\animate.css" />
+    <Content Include="Content\css for Index\css\grid.css" />
+    <Content Include="Content\css for Index\css\jquery-ui.css" />
+    <Content Include="Content\css for Index\css\jquery-ui.theme.css" />
+    <Content Include="Content\css for Index\css\menu.css" />
+    <Content Include="Content\css for Index\css\responsive.css" />
+    <Content Include="Content\css for Index\images\1.png" />
+    <Content Include="Content\css for Index\images\2.png" />
+    <Content Include="Content\css for Index\images\3.png" />
+    <Content Include="Content\css for Index\images\banner.jpg" />
+    <Content Include="Content\css for Index\images\bannerbottm.png" />
+    <Content Include="Content\css for Index\images\box.png" />
+    <Content Include="Content\css for Index\images\box2.png" />
+    <Content Include="Content\css for Index\images\c1.jpg" />
+    <Content Include="Content\css for Index\images\c2.jpg" />
+    <Content Include="Content\css for Index\images\dish.png" />
+    <Content Include="Content\css for Index\images\dishdottm.png" />
+    <Content Include="Content\css for Index\images\ingridiants.jpg" />
+    <Content Include="Content\css for Index\images\ingridiantsbottom.png" />
+    <Content Include="Content\css for Index\images\logo.png" />
+    <Content Include="Content\css for Index\images\pattern.jpg" />
+    <Content Include="Content\css for Index\images\review.jpg" />
+    <Content Include="Content\css for Index\images\sign.png" />
+    <Content Include="Content\css for Index\images\ui-bg_glass_55_fbf9ee_1x400.png" />
+    <Content Include="Content\css for Index\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Content\css for Index\images\ui-bg_glass_75_dadada_1x400.png" />
+    <Content Include="Content\css for Index\images\ui-bg_glass_75_e6e6e6_1x400.png" />
+    <Content Include="Content\css for Index\images\ui-bg_glass_95_fef1ec_1x400.png" />
+    <Content Include="Content\css for Index\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <Content Include="Content\css for Index\images\ui-icons_222222_256x240.png" />
+    <Content Include="Content\css for Index\images\ui-icons_2e83ff_256x240.png" />
+    <Content Include="Content\css for Index\images\ui-icons_454545_256x240.png" />
+    <Content Include="Content\css for Index\images\ui-icons_888888_256x240.png" />
+    <Content Include="Content\css for Index\images\ui-icons_cd0a0a_256x240.png" />
+    <Content Include="Content\css for Index\css\style.css" />
+    <Content Include="Content\css for Index\js\fixed-responsive-nav.js" />
+    <Content Include="Content\css for Index\js\jquery-ui.js" />
+    <Content Include="Content\css for Index\js\script.js" />
+    <Content Include="Content\css for Index\js\waypoints.min.js" />
     <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -244,6 +283,8 @@
     <Content Include="Areas\Manager\Views\demo\Index.cshtml" />
     <Content Include="Areas\Manager\Views\Shared\_Navigation.cshtml" />
     <Content Include="Areas\Manager\Views\Shared\_Profile_Info.cshtml" />
+    <Content Include="Content\css for Index\icons\responsivenav.ttf" />
+    <Content Include="Content\css for Index\icons\responsivenav.woff" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
