--- a/QuanLiNhaHang/QuanLiNhaHang/QuanLiNhaHang.csproj
+++ b/QuanLiNhaHang/QuanLiNhaHang/QuanLiNhaHang.csproj
@@ -210,7 +210,7 @@
     <Compile Include="Common\CommonContants.cs" />
     <Compile Include="Common\UserLogin.cs" />
     <Compile Include="Controllers\BaseController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\IndexController.cs" />
     <Compile Include="Controllers\LoginController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -227,39 +227,39 @@
     <Content Include="Content\css for Index\css\jquery-ui.theme.css" />
     <Content Include="Content\css for Index\css\menu.css" />
     <Content Include="Content\css for Index\css\responsive.css" />
-    <Content Include="Content\css for Index\images\1.png" />
-    <Content Include="Content\css for Index\images\2.png" />
-    <Content Include="Content\css for Index\images\3.png" />
-    <Content Include="Content\css for Index\images\banner.jpg" />
-    <Content Include="Content\css for Index\images\bannerbottm.png" />
-    <Content Include="Content\css for Index\images\box.png" />
-    <Content Include="Content\css for Index\images\box2.png" />
-    <Content Include="Content\css for Index\images\c1.jpg" />
-    <Content Include="Content\css for Index\images\c2.jpg" />
-    <Content Include="Content\css for Index\images\dish.png" />
-    <Content Include="Content\css for Index\images\dishdottm.png" />
-    <Content Include="Content\css for Index\images\ingridiants.jpg" />
-    <Content Include="Content\css for Index\images\ingridiantsbottom.png" />
-    <Content Include="Content\css for Index\images\logo.png" />
-    <Content Include="Content\css for Index\images\pattern.jpg" />
-    <Content Include="Content\css for Index\images\review.jpg" />
-    <Content Include="Content\css for Index\images\sign.png" />
-    <Content Include="Content\css for Index\images\ui-bg_glass_55_fbf9ee_1x400.png" />
-    <Content Include="Content\css for Index\images\ui-bg_glass_65_ffffff_1x400.png" />
-    <Content Include="Content\css for Index\images\ui-bg_glass_75_dadada_1x400.png" />
-    <Content Include="Content\css for Index\images\ui-bg_glass_75_e6e6e6_1x400.png" />
-    <Content Include="Content\css for Index\images\ui-bg_glass_95_fef1ec_1x400.png" />
-    <Content Include="Content\css for Index\images\ui-bg_highlight-soft_75_cccccc_1x100.png" />
-    <Content Include="Content\css for Index\images\ui-icons_222222_256x240.png" />
-    <Content Include="Content\css for Index\images\ui-icons_2e83ff_256x240.png" />
-    <Content Include="Content\css for Index\images\ui-icons_454545_256x240.png" />
-    <Content Include="Content\css for Index\images\ui-icons_888888_256x240.png" />
-    <Content Include="Content\css for Index\images\ui-icons_cd0a0a_256x240.png" />
     <Content Include="Content\css for Index\css\style.css" />
     <Content Include="Content\css for Index\js\fixed-responsive-nav.js" />
     <Content Include="Content\css for Index\js\jquery-ui.js" />
     <Content Include="Content\css for Index\js\script.js" />
     <Content Include="Content\css for Index\js\waypoints.min.js" />
+    <Content Include="Content\image\1.png" />
+    <Content Include="Content\image\2.png" />
+    <Content Include="Content\image\3.png" />
+    <Content Include="Content\image\banner.jpg" />
+    <Content Include="Content\image\bannerbottm.png" />
+    <Content Include="Content\image\box.png" />
+    <Content Include="Content\image\box2.png" />
+    <Content Include="Content\image\c1.jpg" />
+    <Content Include="Content\image\c2.jpg" />
+    <Content Include="Content\image\dish.png" />
+    <Content Include="Content\image\dishdottm.png" />
+    <Content Include="Content\image\ingridiants.jpg" />
+    <Content Include="Content\image\ingridiantsbottom.png" />
+    <Content Include="Content\image\logo.png" />
+    <Content Include="Content\image\pattern.jpg" />
+    <Content Include="Content\image\review.jpg" />
+    <Content Include="Content\image\sign.png" />
+    <Content Include="Content\image\ui-bg_glass_55_fbf9ee_1x400.png" />
+    <Content Include="Content\image\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Content\image\ui-bg_glass_75_dadada_1x400.png" />
+    <Content Include="Content\image\ui-bg_glass_75_e6e6e6_1x400.png" />
+    <Content Include="Content\image\ui-bg_glass_95_fef1ec_1x400.png" />
+    <Content Include="Content\image\ui-bg_highlight-soft_75_cccccc_1x100.png" />
+    <Content Include="Content\image\ui-icons_222222_256x240.png" />
+    <Content Include="Content\image\ui-icons_2e83ff_256x240.png" />
+    <Content Include="Content\image\ui-icons_454545_256x240.png" />
+    <Content Include="Content\image\ui-icons_888888_256x240.png" />
+    <Content Include="Content\image\ui-icons_cd0a0a_256x240.png" />
     <Content Include="Content\PagedList.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -311,22 +311,6 @@
     <Content Include="Views\Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
-    <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
-    <Content Include="Views\Account\ConfirmEmail.cshtml" />
-    <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
-    <Content Include="Views\Account\ExternalLoginFailure.cshtml" />
-    <Content Include="Views\Account\ForgotPassword.cshtml" />
-    <Content Include="Views\Account\ForgotPasswordConfirmation.cshtml" />
-    <Content Include="Views\Account\Login.cshtml" />
-    <Content Include="Views\Account\Register.cshtml" />
-    <Content Include="Views\Account\ResetPassword.cshtml" />
-    <Content Include="Views\Account\ResetPasswordConfirmation.cshtml" />
-    <Content Include="Views\Account\SendCode.cshtml" />
-    <Content Include="Views\Account\VerifyCode.cshtml" />
     <Content Include="Views\Manage\AddPhoneNumber.cshtml" />
     <Content Include="Views\Manage\ChangePassword.cshtml" />
     <Content Include="Views\Manage\Index.cshtml" />
@@ -337,6 +321,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Login\Index.cshtml" />
     <Content Include="Views\AddNV\Index.cshtml" />
+    <Content Include="Views\Index\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
