--- a/QuanLiNhaHang/Model/Model.csproj
+++ b/QuanLiNhaHang/Model/Model.csproj
@@ -59,7 +59,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Dao\NhanVienDao.cs" />
+    <Compile Include="Dao\TaiKhoanDao.cs" />
     <Compile Include="EF\Ban.cs" />
     <Compile Include="EF\ChiTietHoaDon.cs" />
     <Compile Include="EF\ChiTietPhieuNhap.cs" />
