--- a/QuanLiNhaHang/QuanLiNhaHang/QuanLiNhaHang.csproj
+++ b/QuanLiNhaHang/QuanLiNhaHang/QuanLiNhaHang.csproj
@@ -219,6 +219,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ChitiethoadonModel.cs" />
     <Compile Include="Models\HoadonModel.cs" />
     <Compile Include="Models\LoginModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -235,23 +236,54 @@
     <Content Include="Areas\Employee\Content\build\images\loading.gif" />
     <Content Include="Areas\Employee\Content\build\js\custom.js" />
     <Content Include="Areas\Employee\Content\build\js\custom.min.js" />
+    <Content Include="Areas\Employee\Content\css for item\bootstrap.css" />
+    <Content Include="Areas\Employee\Content\css for item\creditly.css" />
+    <Content Include="Areas\Employee\Content\css for item\easy-responsive-tabs.css" />
+    <Content Include="Areas\Employee\Content\css for item\flexslider.css" />
+    <Content Include="Areas\Employee\Content\css for item\font-awesome.css" />
+    <Content Include="Areas\Employee\Content\css for item\jquery-ui1.css" />
+    <Content Include="Areas\Employee\Content\css for item\popuo-box.css" />
+    <Content Include="Areas\Employee\Content\css for item\style.css" />
     <Content Include="Areas\Employee\Content\css\maps\jquery-jvectormap-2.0.3.css" />
+    <Content Include="Areas\Employee\Content\images\20150625_ANKT_TomTamVungChien-4-3091f.jpg" />
     <Content Include="Areas\Employee\Content\images\american-express.png" />
+    <Content Include="Areas\Employee\Content\images\canhrongbien.jpg" />
+    <Content Include="Areas\Employee\Content\images\changa.jpg" />
+    <Content Include="Areas\Employee\Content\images\coca.jpg" />
     <Content Include="Areas\Employee\Content\images\cropper.jpg" />
+    <Content Include="Areas\Employee\Content\images\dau-ca-hoi-nau-canh-chua.jpg" />
     <Content Include="Areas\Employee\Content\images\favicon.ico" />
+    <Content Include="Areas\Employee\Content\images\haisantanbixanh.jpg" />
     <Content Include="Areas\Employee\Content\images\img.jpg" />
     <Content Include="Areas\Employee\Content\images\inbox.png" />
     <Content Include="Areas\Employee\Content\images\mastercard.png" />
     <Content Include="Areas\Employee\Content\images\media.jpg" />
     <Content Include="Areas\Employee\Content\images\paypal.png" />
+    <Content Include="Areas\Employee\Content\images\pepsi.jpg" />
     <Content Include="Areas\Employee\Content\images\picture.jpg" />
     <Content Include="Areas\Employee\Content\images\prod-1.jpg" />
     <Content Include="Areas\Employee\Content\images\prod-2.jpg" />
     <Content Include="Areas\Employee\Content\images\prod-3.jpg" />
     <Content Include="Areas\Employee\Content\images\prod-4.jpg" />
     <Content Include="Areas\Employee\Content\images\prod-5.jpg" />
+    <Content Include="Areas\Employee\Content\images\sup-bi-do-kieu-thai-480x320.jpg" />
     <Content Include="Areas\Employee\Content\images\user.png" />
     <Content Include="Areas\Employee\Content\images\visa.png" />
+    <Content Include="Areas\Employee\Content\images\vit-quay.jpg" />
+    <Content Include="Areas\Employee\Content\images\xoihaptom.jpg" />
+    <Content Include="Areas\Employee\Content\js for item\bootstrap.js" />
+    <Content Include="Areas\Employee\Content\js for item\creditly.js" />
+    <Content Include="Areas\Employee\Content\js for item\easing.js" />
+    <Content Include="Areas\Employee\Content\js for item\easyResponsiveTabs.js" />
+    <Content Include="Areas\Employee\Content\js for item\imagezoom.js" />
+    <Content Include="Areas\Employee\Content\js for item\jquery-2.1.4.min.js" />
+    <Content Include="Areas\Employee\Content\js for item\jquery-ui.js" />
+    <Content Include="Areas\Employee\Content\js for item\jquery.flexisel.js" />
+    <Content Include="Areas\Employee\Content\js for item\jquery.flexslider.js" />
+    <Content Include="Areas\Employee\Content\js for item\jquery.magnific-popup.js" />
+    <Content Include="Areas\Employee\Content\js for item\minicart.js" />
+    <Content Include="Areas\Employee\Content\js for item\move-top.js" />
+    <Content Include="Areas\Employee\Content\js for item\SmoothScroll.min.js" />
     <Content Include="Areas\Employee\Content\js\datepicker\daterangepicker.js" />
     <Content Include="Areas\Employee\Content\js\moment\moment.min.js" />
     <Content Include="Areas\Employee\vendors\animate.css\animate.css" />
@@ -4565,6 +4597,7 @@
     <Content Include="Areas\Employee\Views\Home\Info.cshtml" />
     <Content Include="Areas\Employee\Views\Home\Hoadon.cshtml" />
     <Content Include="Areas\Employee\Views\Home\Chitiethoadon.cshtml" />
+    <Content Include="Areas\Employee\Views\Home\XuatHoadon.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
