--- a/QuanLiNhaHang/QuanLiNhaHang/QuanLiNhaHang.csproj
+++ b/QuanLiNhaHang/QuanLiNhaHang/QuanLiNhaHang.csproj
@@ -205,8 +205,15 @@
     <Compile Include="Areas\Employee\EmployeeAreaRegistration.cs" />
     <Compile Include="Areas\Manager\Controllers\demoController.cs" />
     <Compile Include="Areas\Manager\Controllers\HomeController.cs" />
+    <Compile Include="Areas\Manager\Controllers\MatHangController.cs" />
+    <Compile Include="Areas\Manager\Controllers\MonAnController.cs" />
     <Compile Include="Areas\Manager\Controllers\NhanVienController.cs" />
+    <Compile Include="Areas\Manager\Controllers\PhieuNhapController.cs" />
     <Compile Include="Areas\Manager\ManagerAreaRegistration.cs" />
+    <Compile Include="Areas\Manager\Models\ChiTietThanhPhan\ThanhPhanModel.cs" />
+    <Compile Include="Areas\Manager\Models\MatHangModelView.cs" />
+    <Compile Include="Areas\Manager\Models\NhanVienModelView.cs" />
+    <Compile Include="Areas\Manager\Models\PhieuNhapModelView.cs" />
     <Compile Include="Common\CommonContants.cs" />
     <Compile Include="Common\UserLogin.cs" />
     <Compile Include="Controllers\BaseController.cs" />
@@ -241,9 +248,20 @@
     <Content Include="Areas\Manager\Views\NhanVien\Index.cshtml" />
     <Content Include="Areas\Manager\Views\NhanVien\Create.cshtml" />
     <Content Include="Areas\Manager\Views\NhanVien\Edit.cshtml" />
-    <Content Include="Areas\Manager\Views\demo\Index.cshtml" />
     <Content Include="Areas\Manager\Views\Shared\_Navigation.cshtml" />
     <Content Include="Areas\Manager\Views\Shared\_Profile_Info.cshtml" />
+    <Content Include="Areas\Manager\Views\MonAn\Create.cshtml" />
+    <Content Include="Areas\Manager\Views\MonAn\Index.cshtml" />
+    <Content Include="Areas\Manager\Views\MonAn\Edit.cshtml" />
+    <Content Include="Areas\Manager\Views\MatHang\Create.cshtml" />
+    <Content Include="Areas\Manager\Views\MatHang\Edit.cshtml" />
+    <Content Include="Areas\Manager\Views\MatHang\Index.cshtml" />
+    <Content Include="Areas\Manager\Views\PhieuNhap\Create.cshtml" />
+    <Content Include="Areas\Manager\Views\PhieuNhap\Edit.cshtml" />
+    <Content Include="Areas\Manager\Views\PhieuNhap\Index.cshtml" />
+    <Content Include="Areas\Manager\Views\MonAn\Add.cshtml" />
+    <Content Include="Areas\Manager\Views\MonAn\Detail.cshtml" />
+    <Content Include="Areas\Manager\Views\MonAn\EditDetail.cshtml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -303,7 +321,6 @@
     <Folder Include="Areas\Employee\Views\Shared\" />
     <Folder Include="Areas\Manager\Assets\build\" />
     <Folder Include="Areas\Manager\Assets\vendors\" />
-    <Folder Include="Areas\Manager\Models\" />
     <Folder Include="Assets\css\" />
     <Folder Include="Assets\js\" />
     <Folder Include="Views\Base\" />
